# tree-sitter-unilang

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json  vec_test.ul
bindings/c/: tree-sitter-unilang.h  tree-sitter-unilang.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_unilang/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterUnilangTests/: TreeSitterUnilangTests.swift
queries/: brackets.scm  highlights.scm  locals.scm  outline.scm
src/: grammar.json  node-types.json  parser.c
